# paia-supernote

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_user_board.py
.pi-subagents/artifacts/: 400d6d54_planner_0_input.md  400d6d54_planner_0_meta.json  400d6d54_planner_0_output.md  (+5 more)
docs/: font-calibration-results.md  supernote-cloud-change-ledger-contracts.md
scripts/: calibrate_fonts.py  create_test_note.py  e2e_write_test.py  inspect_note_stars.py  paia-supernote-enrich.plist  paia-supernote-ingest.plist  paia-supernote-service.plist  probe_cloud_api.py  quick_filing_pilot.py  quick_note_audit.py  service.sh  supernote_link_probe.py
tests/: __init__.py  test_agent_read_contracts.py  test_cli.py  test_cli_structured_errors.py  test_cloud_change_ledger.py  test_cloud_poller_health.py  test_db.py  test_enrichment.py  test_events.py  test_filing_ledger.py  test_folio.py  test_ingest_change_ledger.py  test_integration.py  test_main.py  test_model_config.py  test_move_pipeline.py  test_native_link_probe.py  test_note_page_ops.py  test_note_reorder.py  test_note_snapshot.py  test_notebook_artifacts.py  test_notebook_writer.py  test_organizer_api.py  test_organizer_images.py  test_organizer_runtime.py  test_organizer_server.py  test_organizer_ui.py  test_page_state.py  test_pipeline_services.py  test_placeholder.py  test_quick_filing.py  test_quick_filing_service.py  test_quick_filing_service_phases.py  test_quick_note_audit.py  test_ratta_rle.py  test_reader.py  test_snippet_detector.py  test_structured_errors.py  test_task_curator.py  test_tasks_sync.py  (+5 more)
(+76 files in other folders)
